Fixed scrollbars.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,17 +1,10 @@
 * {
-    border: 1px;
-    border-color: red;
-}
-
-html {
-
+    padding: 0px;
+    margin: 0px;
 }
 
 body {
     background: #EDEDE7;
-
-    width: 100%;
-    height: 100%;
 }
 
 .splash-regular {
@@ -31,7 +24,7 @@ h1 {
     top: 0px;
     left: 15px;
 
-    width: 50vh;
+    width: 35%;
 
 }
 
@@ -41,6 +34,6 @@ h1 {
     top: 0px;
     right: 15px;
 
-    width: 50vh;
+    width: 35%;
 
 }
